<resources>
    <string name="app_name">Snap Log</string>

    <string name="txtVoice">voice text</string>
    <string name="txtAddress">place\naddress</string>
    <string name="todo">TODO</string>

    <!-- Preference Titles -->
    <string name="messages_header">Preference Setting</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="zoom_title">Google Map Zoom Level </string>
    <string name="radius_title">Search Radius in Meters</string>
    <string name="sort_title">Sort Sequence</string>
    <string name="signature_alpha">Alpha value (100~255)</string>
    <string name="with_photo">Include original photo</string>
    <string name="rio_logo">Show Signature</string>

    <string name="auto_title">Load PlaceList automatically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="space">" "</string>

</resources>