<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/type_recycler"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#fff"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textureView"
    />

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/type_recycler"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/textVoice"
        android:autofillHints="phone"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:inputType="text|textMultiLine"
        android:lineSpacingExtra="0sp"
        android:text="@string/txtVoice"
        android:textColor="#FF0"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_weight="8"
        app:layout_constraintTop_toBottomOf="@id/type_recycler"
        app:layout_constraintBottom_toTopOf="@id/placeAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnSpeak"
        />

    <ImageButton
        android:id = "@+id/btnSpeak"
        android:layout_width = "54dp"
        android:layout_height = "54dp"
        android:layout_margin = "8sp"
        android:background = "#00000000"
        android:contentDescription = "@string/todo"
        android:src = "@mipmap/micro_phone"
        app:layout_constraintBottom_toBottomOf = "@id/textVoice"
        app:layout_constraintHorizontal_weight = "1"
        app:layout_constraintLeft_toRightOf = "@id/textVoice"
        app:layout_constraintRight_toRightOf = "parent"
        app:layout_constraintTop_toBottomOf = "@id/type_recycler" />

    <ImageView
        android:id="@+id/setting"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#00000000"
        android:contentDescription="@string/todo"
        android:src="@drawable/shot_exit"
        android:layout_margin="32dp"
        app:layout_constraintLeft_toRightOf="@id/type_recycler"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/placeAddress"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:autofillHints="phone"
        android:inputType="text|textMultiLine"
        android:textAlignment="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/txtAddress"
        android:textSize="18sp"
        android:textColor="#FF0"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintHorizontal_weight="8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnPlace"
        app:layout_constraintTop_toBottomOf="@+id/textVoice"
        />

    <ImageButton
        android:id="@+id/btnPlace"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_margin="8sp"
        android:background="#00000000"
        android:contentDescription="@string/todo"
        android:src="@mipmap/place_holder"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/placeAddress"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textVoice"
        app:layout_constraintBottom_toBottomOf="@id/placeAddress"
        />

    <ImageView
        android:id="@+id/btnShot"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="#00000000"
        android:contentDescription="@string/todo"
        android:src="@drawable/shot"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/btnShotExit"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="#00000000"
        android:contentDescription="@string/todo"
        android:src="@drawable/shot_exit"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintRight_toLeftOf="@id/btnShot"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>